--- a/store/templates/store/store.html
+++ b/store/templates/store/store.html
@@ -1,6 +1,7 @@
+{% extends 'store/main.html' %}
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+{% block content %}
 
-<h1>Store</h1>
+    <h3>Store</h3>
 
-<img src="{% static 'images/cart.png' %}">
+{% endblock content %}
