--- a/store/templates/store/cart.html
+++ b/store/templates/store/cart.html
@@ -1,5 +1,5 @@
 {% extends 'store/main.html' %}
 {% load static %}
 {% block content %}
-     <h3>cart</h3>
+     <h3>Cart</h3>
 {% endblock content %}
